--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -23,7 +23,8 @@ button {
 .header {
     display: flex;
     gap: 20px;
-    padding: 20px;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .first {
@@ -42,6 +43,7 @@ button {
 .logo {
     color: #F9FAF8;
     font-size: 24px;
+    margin-left: 100px;
 }
 
 .left {
@@ -50,7 +52,7 @@ button {
 
 .mid {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin-top: 100px;
     margin-bottom: 100px;
 }
@@ -62,6 +64,7 @@ button {
     flex-wrap: wrap;
     width: 500px;
     gap: 20px;
+    margin-left: 100px;
 }
 
 .east {
@@ -71,4 +74,9 @@ button {
     align-items: center;
     color: #E5E7EB;
     width: 500px;
+    margin-right: 100px;
+}
+
+.three {
+    margin-right: 100px;
 }
